overlays/dev/patches/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: vault-development
spec:
  rules:
    - host: argo.dev.dramisinfo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argo.dev.dramisinfo.com
      secretName: argocd-server-tls # as expected by argocd-server
